--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
       <version>2.3.20</version>
     </dependency>
 
+	<dependency>
+	    <groupId>com.google.code.gson</groupId>
+	    <artifactId>gson</artifactId>
+	    <version>2.3.1</version>
+	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
