--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,12 @@
 	    <version>1.3.2</version>
 	</dependency>
 
+	<dependency>
+	    <groupId>mysql</groupId>
+	    <artifactId>mysql-connector-java</artifactId>
+	    <version>5.1.34</version>
+	</dependency>
+
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
